--- a/octopus-frontend/octopus-android/app/src/main/res/values/colors.xml
+++ b/octopus-frontend/octopus-android/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#ef4010</color>
+    <color name="colorPrimaryDark">#ae3e1e</color>
+    <color name="colorAccent">#00A9FF</color>
+    <color name="colorHeader">#777d84</color>
 </resources>
